# astartectl_test_suite

./: .gitignore  README.md  import.xml  test.sh
.reuse/: dep5
tests/: conftest.py  pyproject.toml  resources.py  test_app_engine.py
tests/app_engine/: test_app_engine_devices_credentials_inhibit.py
tests/app_engine/device/: test_app_engine_device.py  test_app_engine_groups.py
tests/app_engine/device/app_engine_device_aliases_attributes/: test_app_engine_device_attributes.py
tests/app_engine/device/app_engine_device_get_samples/: test_app_engine_device_get_samples_csv.py  test_app_engine_device_get_samples_default.py  test_app_engine_device_get_samples_error_cases.py  test_app_engine_device_get_samples_json.py
tests/app_engine/device/app_engine_device_publish_datastream/: json_object.json  json_object.json.license  test_app_engine_device_publish_datastream_individual_datastream.py  test_app_engine_device_publish_datastream_object_datastream.py
tests/app_engine/device/app_engine_device_set_unset_property/: test_app_engine_device_set_property.py  test_app_engine_device_unset_property.py
tests/housekeeping/: test_housekeeping_realm.py
tests/pairing_agent/: test_pairing_agent.py
tests/realm_management/: test_realm_management_interfaces.py  test_realm_management_trigger.py
tests/realm_management/test_interfaces/: test.astarte-platform.draft.interfaces.Install.json
tests/realm_management/test_triggers/: test_trigger.json
tests/utils/: test_utils_generate.py  test_utils_show_jwt_claims.py
tests/utils/device_id/: test_utils_device_id.py
(+15 files in other folders)
